src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html {
  scroll-behavior: smooth;
  overflow-y: auto !important;
}

body {
  @apply bg-background font-outfit text-gray-800 transition-colors duration-300;
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  overflow-y: auto !important;
}

/* Specific class to allow selection for devs/owners */
.selection-enabled {
  user-select: text !important;
  -webkit-user-select: text !important;
  -moz-user-select: text !important;
  -ms-user-select: text !important;
}

/* Prevent image dragging (ghosting) */
img {
  -webkit-user-drag: none;
  -khtml-user-drag: none;
  -moz-user-drag: none;
  -o-user-drag: none;
  user-drag: none;
  pointer-events: auto; /* Ensure they can still be clicked! */
}

